[WIP] wp-continuous-integration image build

--- a/ansible/roles/wordpress-builds/tasks/main.yml
+++ b/ansible/roles/wordpress-builds/tasks/main.yml
@@ -40,6 +40,7 @@
     - wp.base.build
     - wp.base.tekton
     - wp.base.tekton.toolbox.rebuild
+    - wp.base.tekton.wp_ci.rebuild
 
 - name: Kong reverse proxy for blue/green(/red/yellow/orange) testing
   include_tasks:
