--- a/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
+++ b/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
@@ -26,7 +26,7 @@
 {%   set _request_ram = _request_ram_de_minimis %}
 {% endif %}
 
-spec:
+# spec:
     replicas: >-
       {{ 2 if inventory_deployment_stage == "production"
       else 1 }}
