[fix] Permissions for Role/wp-continuous-integration

--- a/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
@@ -479,6 +479,17 @@
           resources:
             - persistentvolumeclaims
           verbs: ['create', 'delete', 'deletecollection', 'patch', 'update', 'get', 'list', 'watch']
+        - apiGroups: ['']
+          resources:
+            - secrets
+          resourceNames:
+            - wp-ci-github-app-secrets
+          verbs: ['get', 'list', 'watch']
+        - apiGroups: ['apps']
+          resources:
+            - replicasets
+            - deployments
+          verbs: ['get', 'list', 'watch']
 
 - name: RoleBinding/wp-continuous-integration
   kubernetes.core.k8s:
