[fix] Give `pipeline` serviceAccount the credentials it needs
The long and short of https://tekton.dev/docs/pipelines/podtemplates/
is that `imagePullSecrets` is not a supported feature of Tekton. Grant
the credential to the serviceAccount instead, “old-school” Kubernetes
style.

--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -287,6 +287,17 @@
               - name: _deploy-tag
                 value: $(tasks.prep.results.build-tag)
 
+- name: "Credentials that let {{ wp_base_builder_buildah_service_account }} pull tekton-toolbox"
+  kubernetes.core.k8s:
+    definition:
+      apiVersion: v1
+      kind: ServiceAccount
+      metadata:
+        name: "{{ wp_base_builder_buildah_service_account }}"
+        namespace: "{{ inventory_namespace }}"
+      imagePullSecrets:
+      - name: "{{ quay_puller_secret_name }}"
+
 - name: wp-base/Tekton - CronJob for Release Candidate
   kubernetes.core.k8s:
     definition:
