[fix] Add quotes in JSON

--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -259,7 +259,7 @@
                             {
                               "epfl":
                               {
-                                "built-from-branch": $(params.branch-name)
+                                "built-from-branch": "$(params.branch-name)"
                               }
                             }
                           },
