[fix] No nested labels

--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -257,10 +257,7 @@
                           {
                             "labels":
                             {
-                              "epfl":
-                              {
-                                "built-from-branch": "$(params.branch-name)"
-                              }
+                              "epfl/built-from-branch": "$(params.branch-name)"
                             }
                           },
                           "spec":
