[fix] Fan out to proper back-end `Service`

--- a/ansible/roles/wordpress-builds/templates/kong.yml
+++ b/ansible/roles/wordpress-builds/templates/kong.yml
@@ -4,7 +4,7 @@ services:
 {#   # Like in the Route objects in ../tasks/continuous-integration.yml: #}
 {%   set hostname = "wp-test-%s" % flavor.name %}
 - name: {{ hostname }}
-  url: http://wp-nginx/
+  url: http://wp-nginx-{{ flavor.name }}/
   routes:
   - name: {{ hostname }}
     hosts:
