[feature] Build wp-base image on branches
- New function `switch_repo_branch` in `install-wordpress.sh`, which
  stays unused in a normal build
- The Tekton pipeline appends calls to it at the end of the script

--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -47,6 +47,9 @@
                       /workspace/source/wp-ops/docker/*/Dockerfile
                     sed -i 's;FROM ubuntu:jammy;FROM {{ ansible_quay_hostname }}/{{ quay_organization }}/ubuntu:jammy;g' \
                       /workspace/source/wp-ops/docker/*/Dockerfile
+                    for repo in "$@"; do
+                      echo "switch_repo_branch '$repo' '$(params.branch-name)'" >> /workspace/source/wp-ops/docker/wp-base/install-wordpress.sh
+                    done
             workspaces:
               - name: source
                 workspace: shared-workspace
@@ -193,6 +196,10 @@
                               value: 2025-136-auto
                             - name: target-deployment
                               value: wp-nginx-rc
+                            - name: repos
+                              value: []
+                            - name: branch_name
+                              value: master
                           workspaces:
                             - name: shared-workspace
                               persistentVolumeClaim:
