[fix] Only annotations are free-form text

--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -255,7 +255,7 @@
                         {
                           "metadata":
                           {
-                            "labels":
+                            "annotations":
                             {
                               "epfl/built-from-branch": "$(params.branch-name)"
                             }
