--- a/docker/tekton-toolbox/Dockerfile
+++ b/docker/tekton-toolbox/Dockerfile
@@ -2,5 +2,5 @@ FROM ubuntu:noble
 
 RUN set -e -x; export DEBIAN_FRONTEND=noninteractive; \
     apt -qy update; \
-    apt -qy install git jq pwgen ; \
+    apt -qy install git jq pwgen curl ; \
     apt-get clean
