--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -162,7 +162,7 @@
                                     | last
                                     | if . == null then "'$STEM'-001" else .key end')"
                                   num="$(echo "$last" | sed -n 's/.*-\([0-9][0-9]*\)$/\1/p')"
-                                  TAG="$(printf "%s-%d" "$STEM" $((num + 1)))" ;;
+                                  TAG="$(printf "%s-%03d" "$STEM" $((num + 1)))" ;;
                     esac
                     echo -n "$TAG" > $(results.build-tag.path)
                     git clone -b feature/wp-base-cloud-tekton-build https://github.com/epfl-si/wp-ops /workspace/source/wp-ops
