--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -76,7 +76,7 @@
                 resources:
                   limits: "{{ _limits_serving_for_prod_only }}"
                   requests:
-                    cpu: '{{ _request_cpu_serving }}'
+                    cpu: '{{ _request_cpu_nginx }}'
                     memory: '{{ _request_ram }}'
                 ports:
                   - containerPort: 8000
@@ -121,7 +121,7 @@
                 resources:
                   limits: "{{ _limits_serving_for_prod_only }}"
                   requests:
-                    cpu: '{{ _request_cpu_serving }}'
+                    cpu: '{{ _request_cpu_php }}'
                     memory: '{{ _request_ram }}'
                 volumeMounts:
                   - name: wordpress-data
@@ -204,8 +204,11 @@
   vars:
     _item_name:  >-
       {{ "wp-nginx" if item == "wp-nginx" else "wp-nginx-" + item  }}
-    _request_cpu_serving: >-
+    _request_cpu_php: >-
       {{ "1" if inventory_deployment_stage == "production"
+      else "10m" }}
+    _request_cpu_nginx: >-
+      {{ "15m" if inventory_deployment_stage == "production"
       else "10m" }}
     _request_cpu_monitoring: >-
       {{ "100m" if inventory_deployment_stage == "production"
