--- a/docker/wp-cron/Dockerfile
+++ b/docker/wp-cron/Dockerfile
@@ -28,8 +28,7 @@ RUN set -e -x; cd /usr/local/bin/ ; \
 COPY ./requirements.txt .
 RUN pip3 install -r ./requirements.txt --break-system-packages
 
-# `wp-base` below means the image built from https://github.com/epfl-si/wp-ops/tree/WPN/docker/wp-base
-COPY --from=wp-base /wp /wp
-COPY --from=wp-base /usr/local/bin/wp /usr/local/bin/wp
+COPY --from=quay-its.epfl.ch/svc0041/wp-base:rc /wp /wp
+COPY --from=quay-its.epfl.ch/svc0041/wp-base:rc /usr/local/bin/wp /usr/local/bin/wp
 
 ADD wp-cron.py wordpresses.py pushgateway.py /
