--- a/ansible/roles/wordpress-builds/tasks/main.yml
+++ b/ansible/roles/wordpress-builds/tasks/main.yml
@@ -85,3 +85,25 @@
         - wp.continuous-integration.kong.restart
         - wp.continuous-integration.rebuild
         - wp.continuous-integration.restart
+
+- name: wp-cron cloud build
+  include_tasks:
+    file: _buildconfig.yml
+    apply:
+      tags:
+      - wp.cron
+  vars:
+    buildconfig_name: wp-cron
+    buildconfig_description: Periodic jobs (“cron”) for WordPress, incl. monitoring and operator reconciliation loop
+    buildconfig_base: "{{ ansible_quay_hostname }}/{{ quay_organization }}/ubuntu:noble"
+    buildconfig_source:
+      type: Git
+      git:
+        uri: "https://github.com/epfl-si/wp-ops"
+        ref: "feature/wp-base-cloud-tekton-build"   # TODO: remove upon merging
+      contextDir: docker/wp-cron
+    buildconfig_rebuild_tags:
+    - wp.cron.rebuild
+  tags:
+    - wp.cron
+    - wp.cron.rebuild
