--- a/ansible/roles/wordpress-builds/tasks/main.yml
+++ b/ansible/roles/wordpress-builds/tasks/main.yml
@@ -107,3 +107,23 @@
   tags:
     - wp.cron
     - wp.cron.rebuild
+
+- name: wp-operator cloud build
+  include_tasks:
+    file: _buildconfig.yml
+    apply:
+      tags:
+      - wp.operator
+  vars:
+    buildconfig_name: wp-operator
+    buildconfig_description: WordPress operator
+    buildconfig_base: "{{ ansible_quay_hostname }}/{{ quay_organization }}/ubuntu:jammy"
+    buildconfig_source:
+      type: Git
+      git:
+        uri: "https://github.com/epfl-si/wp-operator"
+    buildconfig_rebuild_tags:
+    - wp.operator.rebuild
+  tags:
+    - wp.operator
+    - wp.operator.rebuild
